# frechet-audio-distance-exported

./: .gitignore  README.md  pyproject.toml
frechet_audio_distance_exported/: __init__.py  fad.py
frechet_audio_distance_exported/models/: __init__.py  clap.py  encodec.py  pann.py  vggish.py
scripts/: export_clap.py  export_encodec.py  export_pann.py  export_vggish.py  verify_clap.py  verify_encodec.py  verify_export.py  verify_pann.py
tests/: test_basic.py  test_clap.py  test_encodec.py  test_pann.py
